Fixes for content jumping around

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -24,7 +24,9 @@
 }
 
 .progressStatus {
-  min-height: 3em;
+  height: 4em;
+  margin-bottom: 1em;
+  overflow: hidden;
 }
 
 .footer {
