--- a/src/components/LoadFullPosts/LoadFullPosts.css
+++ b/src/components/LoadFullPosts/LoadFullPosts.css
@@ -1,6 +1,9 @@
 .root {
 }
 
+.done {
+}
+
 .loading {
 }
 
